QS-1485: Remove extra loading message and fix size on small screens

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -110,15 +110,6 @@
 				max-height: 500px;
 				overflow: hidden;
 			}
-			.image.fixed-height-image {
-				height: 222.23px;
-				overflow: hidden;
-				.loading-gif{
-					background-size: 222.23px 222.23px !important;
-					height: 222.23px !important;
-					width: 222.23px !important;
-				}
-			}
 			.matching {
 				margin-top: -32px;
 				position: relative;
